SERVER-10347 Auth-enable authentication for clusterAuthMode x509